# PolySport

./: .env.example  .gitignore  .impeccable.md  .railwayignore  POLYMARKET_GOTCHAS.md  README.md  STRATEGY.md  pyproject.toml  railway.dashboard.toml  railway.toml  requests.http  requirements-dev.txt  requirements.txt
migrations/: 001_phase1_schema.sql  002_odds_api_quota.sql  003_paper_trades.sql  004_paper_trades_dedup_fix.sql  005_paper_trades_polymarket_keys.sql
polysport/: cli.py
polysport/dashboard/: app.py  data.py
polysport/dashboard/templates/: fragment.html  index.html
polysport/data/: paper_trades.py  resolver.py  snapshots.py
polysport/feeds/: matcher.py  odds_api.py  polymarket.py
polysport/math/: devig.py
polysport/monitoring/: toxicity.py
polysport/sim/: honest_fill.py
polysport/strategy/: moneyline.py
polysport/utils/: text.py
scripts/: analyze_divergence.py  analyze_reversion.py  audit_state.py  audit_state2.py  augment_aliases.py  backtest_phase1.py  check_odds_api.py  check_supabase.py  check_window_coverage.py  phase1_logger.py  preflight_matcher.py  resolve_paper_trades.py  seed_teams.py  wipe_snapshots.py
tests/: test_devig.py  test_moneyline.py  test_polymarket_book.py
